Fix Red Color On Mobile -> Gray

--- a/app.css
+++ b/app.css
@@ -286,7 +286,7 @@ li {
       position: absolute;
       width: 100%;
       height: 100%;
-      background-color: #b61924;
+      background-color: #222;
       background-image: url("");
       background-repeat: no-repeat;
       background-size: cover;
